; ModuleID = '/home/carl/AnghaBench/freebsd/bin/rm/extr_rm.c_checkdot.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/rm/extr_rm.c_checkdot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [32 x i8] c"\22.\22 and \22..\22 may not be removed\00", align 1
@eval = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**)* @checkdot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @checkdot(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  store i8** %0, i8*** %2, align 8
  store i32 0, i32* %6, align 4
  %7 = load i8**, i8*** %2, align 8
  store i8** %7, i8*** %5, align 8
  br label %8

8:                                                ; preds = %51, %1
  %9 = load i8**, i8*** %5, align 8
  %10 = load i8*, i8** %9, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %12, label %52

12:                                               ; preds = %8
  %13 = load i8**, i8*** %5, align 8
  %14 = load i8*, i8** %13, align 8
  %15 = call i8* @strrchr(i8* %14, i8 signext 47)
  store i8* %15, i8** %3, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i8*, i8** %3, align 8
  %19 = getelementptr inbounds i8, i8* %18, i32 1
  store i8* %19, i8** %3, align 8
  br label %23

20:                                               ; preds = %12
  %21 = load i8**, i8*** %5, align 8
  %22 = load i8*, i8** %21, align 8
  store i8* %22, i8** %3, align 8
  br label %23

23:                                               ; preds = %20, %17
  %24 = load i8*, i8** %3, align 8
  %25 = call i64 @ISDOT(i8* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %48

27:                                               ; preds = %23
  %28 = load i32, i32* %6, align 4
  %29 = add nsw i32 %28, 1
  store i32 %29, i32* %6, align 4
  %30 = icmp ne i32 %28, 0
  br i1 %30, label %33, label %31

31:                                               ; preds = %27
  %32 = call i32 @warnx(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  br label %33

33:                                               ; preds = %31, %27
  store i32 1, i32* @eval, align 4
  %34 = load i8**, i8*** %5, align 8
  store i8** %34, i8*** %4, align 8
  br label %35

35:                                               ; preds = %43, %33
  %36 = load i8**, i8*** %5, align 8
  %37 = getelementptr inbounds i8*, i8** %36, i64 1
  %38 = load i8*, i8** %37, align 8
  %39 = load i8**, i8*** %5, align 8
  %40 = getelementptr inbounds i8*, i8** %39, i64 0
  store i8* %38, i8** %40, align 8
  %41 = icmp ne i8* %38, null
  br i1 %41, label %42, label %46

42:                                               ; preds = %35
  br label %43

43:                                               ; preds = %42
  %44 = load i8**, i8*** %5, align 8
  %45 = getelementptr inbounds i8*, i8** %44, i32 1
  store i8** %45, i8*** %5, align 8
  br label %35

46:                                               ; preds = %35
  %47 = load i8**, i8*** %4, align 8
  store i8** %47, i8*** %5, align 8
  br label %51

48:                                               ; preds = %23
  %49 = load i8**, i8*** %5, align 8
  %50 = getelementptr inbounds i8*, i8** %49, i32 1
  store i8** %50, i8*** %5, align 8
  br label %51

51:                                               ; preds = %48, %46
  br label %8

52:                                               ; preds = %8
  ret void
}

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i64 @ISDOT(i8*) #1

declare dso_local i32 @warnx(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
